Реализация CRUD для kudos
